# vireon

./: .gitignore  .mailmap  .metrics_history.json  AUTHORS  CONTRIBUTING.md  Cargo.toml  DESENVOLVIMENTO.md  EAP_ROADMAP.md  IP_PROTECTION_CHECKLIST.md  LICENSE  LICENSE-TIERS.md  README.md  README_NEW.md  README_PT.md  RELEASE_NOTES.md  RESUMO_EXECUTIVO_VIREON.md  SESSION.md  TODO.md  VIREON_UNIVERSAL_GOVERNANCE.md  fix_terminology_safe.py  fixed_planner.py  generate_gif.py  index-clean.html  index-final.html  index-v2.html  index-v3.html  index-warp.html  models.py  pyproject.toml  requirements.txt  security_scan_report.json  session_complete.txt  styles-warp.css  symbiotic_secure_bridge.rs  task_mesh_summary_20250707_193758.json  update_versions.ps1  vireon.yaml  vireon_api.py  vireon_minimal.py  vireon_ui.py  (+6 more)
.github/workflows/: ci.yml  terminology-validation.yml
DADOS PESQ GPT/: Resource Adapter.txt  Resumo da Conversa_ Warp CLI com IA.md  Rule System Extension.txt  TASK MASH.txt  Transcrição da Conversa VIREON_ Descoberta de Infraestrutura Simbiótica Warp CLI.md  VIREON Core - Documentação Viva.md  Vireon Blueprint.txt  Vireon Pitch V1.txt  Warp Challenge Strategy Blueprint.txt  Warp Vireon Rules.txt  chatgpt_content.html
RECOVERY_20250531_2233/: Cargo.toml  VIREON_BLUEPRINT.md  warp_rules.rs
Shared/: README.md
VIREON-CORE/: Cargo.toml  README.md
VIREON-CORE/rules/: Cargo.toml
VIREON-CORE/rules/src/: lib.rs
VIREON-CORE/scripts/: init_realignment.ps1
VIREON-CORE/src/: lib.rs  state.rs
VIREON-CORE/src/api/: main.py
VIREON-CORE/src/realignment/: QUANTUM_BRIDGE_IMPLEMENTATION.md  REALIGNMENT_CONFIG.md  REALIGNMENT_SESSION.md  VALIDATION_REPORT.md  bootstrap.rs  consciousness.rs  monitor.rs  quantum_bridge.rs  quantum_communication.rs  quantum_evolution.rs  quantum_integration.rs  realignment_controller.rs  realignment_logger.rs  state.rs
VIREON-CORE/src/realignment/validation/: mod.rs
VIREON-QUANTUM/: Cargo.toml  README.md
VIREON-QUANTUM/src/: lib.rs
WARP_RULES/: agent_config.py  apply_warp_rules.py  warp_rules.md  warp_rules_api.py
WARP_SAGE_INTEGRATION/: LICENSE  quickstart.bat  quickstart.sh
WARP_SAGE_INTEGRATION/docker/: Dockerfile.sage_x_rust  Dockerfile.warp_rules
WARP_SAGE_INTEGRATION/docs/: blueprint_tecnico.md  eap_estrutura_projeto.md
adapters/: base_adapter.py  vscode_adapter.py
cli/: transcendence_cli.py
config/: simulation_rules.json  symbiotic.json  symbiotic_rules.json  warp_resource_limits.json
connectors/: README_TASK_MESH.md  mcp_tools_demo.py  run_task_mesh.py  run_task_mesh_auto.py  task_mesh_orchestrator.py
connectors/data_connectors/: base_data_connector.py  rest_connector.py
connectors/mcp_integration/: mcp_protocol.py
consciousness_interface/: TASK.md  system_initializer.py  unified_config.json  version_events.json
core/: classic_engine.py  cognitive_engine.py  consciousness.py  dimensional.py  evolution.py  feedback.py  implementation_task_mesh.py  metrics_exporter.py  optimized_cache.py  quantum.py  quantum_lite.py  superscope.py  symbiotic_task_mesh.py  unified_ai_orchestrator.py
core/consciousness/: validation.py
core/sage_x_rust_module/: check_log.txt
core/symbiotic_core/: logging_utils.py
core/terminology_governance/: __init__.py  analyzer.py  corrector.py  integration.py  rules.py
core/warp_optimus/: __init__.py
docs/: ARCHITECTURE.md  ARCHITECTURE_UNIFIED.md  COMPETITIVE_ANALYSIS.md  DATA_CONNECTORS_STRATEGY.md  DESENVOLVIMENTO.md  EAP_CRITICAL_ANALYSIS.md  EAP_VIREON.md  GAP-Analysis.md  HOMEPAGE_REFERENCES.md  INDEX.md  MARKET_READINESS_REPORT.md  MARKET_RESEARCH.md  PITCH_DECK.md  SESSION.md  SYMBEON_ECOSYSTEM.md  TODO.md  VIREON_ARCHITECTURE.md  VIREON_GENESIS_AGNOSTIC.md  VIREON_STRATEGIC_REPORT.md  api_reference.md  development_setup.md  eap_desenvolvimento_futuro.md  structured_breakdown.yaml  unified_evolution.md  warp_optimus_guide.md
examples/: basic_swarm.py  meta_governance_example.py  run_benchmark_demo.rs
frontend/: README.NEURAL.md  neural-preview.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  VireonApp.tsx  index.css  main.tsx  neural-styles.css
legacy/api/: init_vireon.py  init_vireon_safe.py  vireon_cli_enhanced.py
legacy/web/: index.html  styles.css
manifesto/: VIREON_manifesto.md
modules/arkitect/: Cargo.toml  README.md
modules/arkitect/docs/: ARCHITECTURE.md
modules/arkitect/src/: lib.rs  secure_bridge.rs
quantum/: Cargo.toml
realignment/: README.md  REALIGNMENT_CONFIG.md  REALIGNMENT_SESSION.md  init_realignment.rs  mod.rs  quantum_monitor.rs
research/: README.md  RESEARCH_SETUP_COMPLETE.md  analysis_meta-governanca_ia_20250509_205139.md  package_research.py  vireon_research.py
scripts/: analyze_terminology.py  fix_all_issues.ps1  fix_issues_simple.ps1  mcp_tools.py  monitor_warp_resources.ps1  optimize_warp.ps1  security_scan.py  setup_neural_interface.ps1  validate_pr.py  vireon_audit.py  vireon_core.py
sdk/: __init__.py  client.py  example.py  models.py  rule_manager.py
src/: lib.rs
src/advanced_processing/: Cargo.toml  README.md  state.rs
src/advanced_processing/research/quantum_core/: Cargo.toml
src/advanced_processing/research/quantum_core/.cargo/: config.toml
src/advanced_processing/src/consciousness/: quantum_layers.rs
src/advanced_processing/src/core/: monitoring.rs
src/advanced_processing/src/protocols/: sync.rs  transcendence.rs
symbiotic_method/: Cargo.toml  pyproject.toml
symbiotic_method/src/: consciousness.rs  error.rs  iris_adapter.rs  lib.rs  quantum_bridge.rs  quantum_memory.rs  utils.rs
templates/: README.md
test_results/: test_report.json
tests/: README.md  __init__.py  quantum_layers_test.rs  test_cli.py  test_core_integration.py  test_metrics_integration.py  test_optimized_engine.py  test_optimized_engine_mock.py  test_terminology.py  test_vireon.py
tools/: setup_dev.ps1  validate_structure.py
vireon/: __init__.py  core.py  licensing.py  models.py
vireon-bridge/: Cargo.toml
vireon-consciousness/: Cargo.toml
vireon-consciousness/src/: lib.rs
(+112 files in other folders)
