[package]
name = "vireon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core Rust components for VIREON - Plataforma Meta-Governança Simbiótica"

[lib]
name = "vireon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"
parking_lot = "0.12"
dashmap = "5.4"
crossbeam = "0.8"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tokio-test = "0.4"
test-case = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "quantum_ops"
harness = false

[features]
default = ["quantum", "consciousness", "evolution"]
quantum = []
consciousness = []
evolution = []

[workspace]
members = [
    "vireon-core",
    "vireon-consciousness",
    "vireon-bridge",
    "vireon-quantum"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VIREON Team"]
repository = "https://github.com/vireon/vireon"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
quantum = { path = "vireon-quantum" }
warp-rules = { path = "vireon-core/rules" }
consciousness = { path = "vireon-consciousness" }

[package]
name = "VIREON"
version = "0.1.0"
edition = "2024"

[dependencies]
