[package]
name = "vireon_py"
version = "0.1.0"
edition = "2021"
authors = ["VIREON Team <dev@vireon.ai>"]
description = "Python bindings for VIREON - Plataforma Meta-Governança Simbiótica"
repository = "https://github.com/vireon/vireon"
license = "MIT OR Apache-2.0"

[lib]
name = "vireon"
crate-type = ["cdylib"]

[dependencies]
# Python Integration
pyo3 = { version = "0.19.0", features = ["extension-module"] }

# Core Dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async and Concurrency
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
rayon = { workspace = true }

# Database and Time
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Local Dependencies
vireon_core = { path = "vireon-core" }
vireon_quantum = { path = "vireon-quantum" }
vireon_consciousness = { path = "vireon-consciousness" }
vireon_bridge = { path = "vireon-bridge" }

# Logging and Monitoring
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"
tokio-test = "0.4"
test-case = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["quantum", "consciousness", "evolution"]
quantum = []
consciousness = []
evolution = []

[workspace]
members = [
    "vireon-core",
    "vireon-consciousness",
    "vireon-bridge",
    "vireon-quantum",
    "symbiotic_method"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VIREON Team"]
repository = "https://github.com/vireon/vireon"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1.68"
futures = "0.3.28"
parking_lot = "0.12"
dashmap = "5.4"
crossbeam = "0.8"
rayon = "1.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
criterion = "0.5"
mockall = "0.11"
tokio-test = "0.4"
test-case = "3.1"
ndarray = "0.15"
num = "0.4"
rand_distr = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tracing-appender = "0.2"
quickcheck = "1.0"
test-log = "0.2"
proptest = "1.2"
fake = "2.6"
rstest = "0.18"

