[tool.poetry]
name = "vireon"
version = "0.1.0"
description = "Plataforma Meta-Governança Simbiótica para Agentes AI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = "^2.0"
numpy = "^1.24.0"
torch = "^2.0.0"
quantum-framework = "^1.0.0"
sqlalchemy = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
redis = "^4.5.0"
psycopg2-binary = "^2.9.0"
maturin = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.0"
pytest-asyncio = "^0.21.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.1.0"]
build-backend = "maturin"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=vireon --cov-report=term-missing -v"

[project]
name = "vireon_neural"
version = "0.1.0"
description = "VIREON Neural Interface Module"
authors = [
    {name = "VIREON Project", email = "dev@vireon.ai"}
]
dependencies = [
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
