[package]
name = "vireon_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["quantum", "consciousness", "realignment"]
quantum = []
consciousness = []
realignment = ["quantum", "consciousness"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Quantum & Realignment Dependencies
ndarray = { workspace = true }
num = { workspace = true }
rand_distr = { workspace = true }

# Metrics & Monitoring
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing-appender = { workspace = true }

# Local Dependencies
vireon_quantum = { path = "../vireon-quantum", optional = true }
vireon_consciousness = { path = "../vireon-consciousness", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
test-case = { workspace = true }
quickcheck = { workspace = true }
test-log = { workspace = true }
proptest = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
