[package]
name = "vireon_quantum"
version = "0.1.0"
edition = "2024"
description = "Implementação experimental de conceitos quânticos do VIREON"
authors = ["VIREON Team"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.4"
mockall = "0.11"

