[package]
name = "consciousness"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["consciousness", "evolution"]
consciousness = []
evolution = []

[dependencies]
quantum = { workspace = true }
warp-rules = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

