[package]
name = "arkitect"
version = "0.1.0"
edition = "2021"
description = "Sistema de validação estrutural e integração segura do VIREON com criptografia resistente a computadores avançados"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
pqcrypto-kyber = "0.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[lib]
name = "arkitect"
path = "src/lib.rs"

[features]
default = ["secure-bridge"]
secure-bridge = []

